# ReplitTrader

./: README.md  angel_api.py  database_manager.py  env_manager.py  gemini_api.py  main.py  market_analyzer.py  pyproject.toml  requirements.txt  telegram_bot.py  trader_friend.db  websocket_client.py
attached_assets/: Pasted--Subject-Blueprint-for-Trader-s-Friend-An-AI-Guided-Intelligent-Trading-Learning-System--1751545116566_1751545116577.txt  Pasted-You-are-to-build-a-real-time-AI-assisted-trading-dashboard-for-the-Indian-stock-market-NSE-focuse-1751551969108_1751551969108.txt  generate_demo_market_log.py
