[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pymysql>=1.1.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "yfinance>=0.2.64",
]
